chore: fixed btns so that they fit content, not stretching to flex container

--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,6 +1,6 @@
 .routes-container {
   width: 60dvw;
-  margin: 0 auto;
+  margin: 2em auto 0 auto;
   padding: 12px;
   display: flex;
   flex-direction: column;
