--- a/src/features/Logoff/Logoff.module.css
+++ b/src/features/Logoff/Logoff.module.css
@@ -9,6 +9,5 @@
     position: relative;
     bottom: 3px;
     left: 9em;
-    width: 106px;
   }
 }
